Add Update while responsive

--- a/portfolio-client/src/App.css
+++ b/portfolio-client/src/App.css
@@ -1,45 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-
-
-
 /* Scrollbar Styles */
 /* For WebKit browsers (e.g., Chrome, Safari) */
 /* ::-webkit-scrollbar {
@@ -60,12 +18,14 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent;
+  /* background: transparent; */
+  background: #1f242d;
 }
 
 ::-webkit-scrollbar-thumb {
   border-radius: 8px;
-  background: #8AAAE5;
+  /* background: #1f242d; */
+  background: #da712c;
   /* transition: var(--transition); */
 }
 
@@ -73,7 +33,7 @@
 ::-webkit-scrollbar-thumb:active {
   /* background: orangered; */
   background: transparent;
-  border: 2px solid #f25476;
+  border: 2px solid #da712c;
 }
 
 html {
@@ -82,4 +42,14 @@ html {
 
 body {
   cursor: none;
+}
+
+@media (min-width: 320px) and (max-width: 768px) {
+  body {
+    overflow: hidden; /* Hide the scrollbar on mobile screens */
+  }
+}
+.scroller {
+  overflow-y: scroll;
+  scrollbar-color: #0a4c95 #c2d2e4;
 }
