--- a/portfolio-client/src/components/styles.css
+++ b/portfolio-client/src/components/styles.css
@@ -171,6 +171,7 @@
     padding-left: 10px !important;
     padding-right: 0px !important;
     margin-right: 0px !important;
+    max-width: 70vw;
   }
   .li_circle {
     width: 2.5rem;
