--- a/portfolio-client/src/components/styles.css
+++ b/portfolio-client/src/components/styles.css
@@ -149,6 +149,23 @@
   padding-right: 0;
 }
 @media (min-width: 1170px) and (max-width: 1400px) {
+  .navbar {
+    /* padding-top: 0 !important; */
+  }
+  .custom_nav_brand {
+    object-fit: scale-down;
+    width: 30%;
+    transform: scale(1.3);
+    margin-left: 3rem !important;
+  }
+  .custom_nav_brand img,
+  svg {
+    /* vertical-align: super; */
+  }
+  .letter__spacing {
+    font-size: 90%;
+    /* letter-spacing: 0.5px; */
+  }
   .text__pink {
     border-top: 1px solid #1f242d !important;
   }
@@ -208,4 +225,10 @@
   .text__pink {
     border-top: 1px solid #1f242d !important;
   }
+}
+
+.Toastify__toast-container--top-right {
+  top: 1em;
+  right: 1em;
+  z-index: 999999 !important;
 }
